Initial progress to extract data

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
+
 <body>
-    
+    <script src="database.js"></script>
+    <script>
+        function Converter(Data) {
+            let strin = JSON.stringify(Data)
+            console.log(strin)
+        }
+        Converter(Data)
+    </script>
+
 </body>
+
 </html>
