--- a/index.html
+++ b/index.html
@@ -2,15 +2,90 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi">
+    <!-- Offline CDNs -->
+    <!-- <script src="stylesheets/bootstrap-4/js/bootstrap.bundle.min.js"></script>
+    <script src="stylesheets/bootstrap-4/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="stylesheets/bootstrap-4/css/bootstrap.css" /> -->
+
+    <!-- Online CDNs -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
+        integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd"
+        crossorigin="anonymous"></script>
+    <!-- css files -->
+    <link rel="stylesheet" href="stylesheets/reset.css" />
+    <link rel="stylesheet" href="stylesheets/main.css" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
+
+    <!-- Scripts -->
+
     <title>Home</title>
 </head>
 
 <body>
-    &copy;
+    <section>
+        <section>
+            <!-- HEADER GOES HERE! -->
+            <header>
+                <nav class="container-fluid navbar navbar-expand-md navbar-dark">
 
+                    <!-- <div data-aos="fade-up" class="logo">
+                        <img src="resources/stylesheets/images/logo.jpg" alt="">
+                    </div> -->
+
+
+                    <div class="collapse navbar-collapse" id="Navbar">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item"><a class="nav-link" href="">Home<a></li>
+                            <li class="nav-item"><a class="nav-link" href="">Scholarships<a></li>
+                            <li class="nav-item"><a class="nav-link" href="">Orientation<a></li>
+                            <li class="nav-item"><a class="nav-link" href="">Contact<a></li>
+                        </ul>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                        <div class="navbar-toggler-icon"></div>
+                    </button>
+                </nav>
+                <div class="hero">
+                    <h1>Welcome To 7GCE</h1>
+                    <p>
+                        Check your GCE Results today for free and explore more educative
+                        content
+                    </p>
+
+                </div>
+
+            </header>
+        </section>
+        <section class="row firstcontainer">
+            <div class="col-sm-6">
+                <p>Fill the space below and search your name</p>
+                <input type="search" name="" id="" placeholder="E.g: Bochu Yunwen....." required>
+                <!-- <input type="submit" value="submit"> -->
+                <button type="submit">Search!</button>
+            </div>
+            <div class="col-sm-6">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque alias vel numquam modi incidunt iure quisquam? Cum earum, mollitia quod quo omnis voluptatibus praesentium culpa explicabo temporibus? Fugit, totam.
+
+
+            </div>
+        </section>
+        <section>
+            <footer>
+                <p>&copy;7GCE</p>
+            </footer>
+        </section>
+    </section>
 </body>
-
 
 </html>
