--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
     <link rel="stylesheet" href="stylesheets/bootstrap-4/css/bootstrap.css" /> -->
 
     <!-- Online CDNs -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
-        integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <!-- css files -->
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/main.css" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=B612&family=Lato&family=Muli:ital@1&display=swap" rel="stylesheet">
 
 
     <!-- Scripts -->
@@ -57,7 +64,7 @@
                     </button>
                 </nav>
                 <div class="hero">
-                    <h1>Welcome To 7GCE</h1>
+                    <h1>WELCOME TO 7GCE</h1>
                     <p>
                         Check your GCE Results today for free and explore more educative
                         content
@@ -70,14 +77,12 @@
         <section class="row firstcontainer">
             <div class="col-sm-6">
                 <p>Fill the space below and search your name</p>
-                <input type="search" name="" id="" placeholder="E.g: Bochu Yunwen....." required>
+                <input type="search" name="" id="" placeholder="E.g: Bochu Yunwen.................." required>
                 <!-- <input type="submit" value="submit"> -->
                 <button type="submit">Search!</button>
             </div>
             <div class="col-sm-6">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque alias vel numquam modi incidunt iure quisquam? Cum earum, mollitia quod quo omnis voluptatibus praesentium culpa explicabo temporibus? Fugit, totam.
-
-
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat illo cupiditate assumenda quas error officiis, tempora aspernatur repudiandae, qui quod inventore illum, nemo quibusdam sed tenetur incidunt laborum suscipit.</p>
             </div>
         </section>
         <section>
