--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=B612&family=Lato&family=Muli:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 
 
     <!-- Scripts -->
@@ -77,7 +78,7 @@
         <section class="row firstcontainer">
             <div class="col-sm-6">
                 <p>Fill the space below and search your name</p>
-                <input type="search" name="" id="" placeholder="E.g: Bochu Yunwen.................." required>
+                <input type="search" name="" id="" placeholder="E.g: Bochu Yunwen......." required>
                 <!-- <input type="submit" value="submit"> -->
                 <button type="submit">Search!</button>
             </div>
