List or namesresults

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
     <!-- Scripts -->
+    <script src="script.js"></script>
 
     <title>Home</title>
 </head>
@@ -78,7 +79,7 @@
         <section class="row firstcontainer">
             <div class="col-sm-6">
                 <p>Fill the space below and search your name</p>
-                <input type="search" name="" id="" placeholder="E.g: Bochu Yunwen......." required>
+                <input type="search" name="" id="" placeholder="E.g: BOCHU YUNWEN......." required>
                 <!-- <input type="submit" value="submit"> -->
                 <button type="submit">Search!</button>
             </div>
