--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi">
     <!-- Offline CDNs -->
-    <!-- <script src="stylesheets/bootstrap-4/js/bootstrap.bundle.min.js"></script>
+    <script src="stylesheets/bootstrap-4/js/bootstrap.bundle.min.js"></script>
     <script src="stylesheets/bootstrap-4/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="stylesheets/bootstrap-4/css/bootstrap.css" /> -->
+    <link rel="stylesheet" href="stylesheets/bootstrap-4/css/bootstrap.css" />
 
     <!-- Online CDNs -->
     <meta name="viewport"
@@ -31,7 +31,9 @@
     <!-- Fonts -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=B612&family=Lato&family=Muli:ital@1&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alegreya&family=B612&family=Lato&family=Muli:ital@1&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 
 
@@ -84,14 +86,17 @@
                 <button type="submit">Search!</button>
             </div>
             <div class="col-sm-6">
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat illo cupiditate assumenda quas error officiis, tempora aspernatur repudiandae, qui quod inventore illum, nemo quibusdam sed tenetur incidunt laborum suscipit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat illo cupiditate assumenda
+                    quas error officiis, tempora aspernatur repudiandae, qui quod inventore illum, nemo quibusdam sed
+                    tenetur incidunt laborum suscipit.</p>
             </div>
         </section>
-        <section class="foot">
+        <p></p>
+        <!-- <section class="foot"> -->
             <footer>
                 <p>&copy;7GCE</p>
             </footer>
-        </section>
+        <!-- </section> -->
     </section>
 </body>
 
