updated html added some pages

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
                     <div class="collapse navbar-collapse" id="Navbar">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item"><a class="nav-link" href="">Home<a></li>
-                            <li class="nav-item"><a class="nav-link" href="">Scholarships<a></li>
-                            <li class="nav-item"><a class="nav-link" href="">Orientation<a></li>
-                            <li class="nav-item"><a class="nav-link" href="">Contact<a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home<a></li>
+                            <li class="nav-item"><a class="nav-link" href="scholarship.html">Scholarships<a></li>
+                            <li class="nav-item"><a class="nav-link" href="oreintation.html">Orientation<a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact<a></li>
                         </ul>
                     </div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -79,25 +79,28 @@
             </header>
         </section>
         <section class="row firstcontainer">
-            <div class="col-sm-6">
+            <div class="col-sm-6 search">
                 <p>Fill the space below and search your name</p>
-                <input type="search" name="" id="" placeholder="E.g: BOCHU YUNWEN......." required>
-                <!-- <input type="submit" value="submit"> -->
-                <button type="submit">Search!</button>
+                <form action="" method="get">
+                    <input type="text" name="" id="" placeholder="E.g: MESAMBE ELMA NZUME-ETUGE" required>
+                    <!-- <input type="submit" value="submit"> -->
+                    <input type="submit" value="Search!">
+
+                </form>
+
             </div>
             <div class="col-sm-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat illo cupiditate assumenda
-                    quas error officiis, tempora aspernatur repudiandae, qui quod inventore illum, nemo quibusdam sed
-                    tenetur incidunt laborum suscipit.</p>
+                <!-- <img src="stylesheets/illustrations/undraw1.svg" alt=""> -->
+                <img src="stylesheets/illustrations/undraw_winners_ao2o.svg" alt="">
             </div>
         </section>
-        <p></p>
         <!-- <section class="foot"> -->
-            <footer>
-                <p>&copy;7GCE</p>
-            </footer>
+        <footer>
+            <p>&copy;7GCE</p>
+        </footer>
         <!-- </section> -->
     </section>
+
 </body>
 
 </html>
