--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi">
     <!-- Offline CDNs -->
-    <script src="stylesheets/bootstrap-4/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
+
+    <!-- <script src="stylesheets/bootstrap-4/js/bootstrap.bundle.min.js"></script>
     <script src="stylesheets/bootstrap-4/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="stylesheets/bootstrap-4/css/bootstrap.css" />
+    <link rel="stylesheet" href="stylesheets/bootstrap-4/css/bootstrap.css" /> -->
 
     <!-- Online CDNs -->
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -24,6 +30,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+
+
+
     <!-- css files -->
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/main.css" />
@@ -37,13 +47,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 
 
-    <!-- Scripts -->
-    <script src="script.js"></script>
+
 
     <title>Home</title>
 </head>
 
 <body>
+    <!-- <section class="preloader">
+        <div class="content">
+        </div>
+        <div class="loader-wrapper">
+            <span class="loader"><span class="loader-inner"></span></span>
+        </div>
+    </section> -->
     <section>
         <section>
             <!-- HEADER GOES HERE! -->
@@ -100,7 +116,8 @@
         </footer>
         <!-- </section> -->
     </section>
-
+    <!-- Scripts -->
+    <script src="script.js"></script>
 </body>
 
 </html>
