--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
         <section class="row firstcontainer">
             <div class="col-sm-6 search">
                 <p>Fill the space below and search your name</p>
-                <form action="" method="get">
-                    <input type="text" name="" id="" placeholder="E.g: MESAMBE ELMA NZUME-ETUGE" required>
+                <form action ="/app.html" method="post" id="form1">
+                    <input type="text" name="username" id="" placeholder="E.g: MESAMBE ELMA NZUME-ETUGE" required>
                     <!-- <input type="submit" value="submit"> -->
                     <input type="submit" value="Search!">
-
+                    <div id="result"></div>
                 </form>
 
             </div>
